--- a/local.yml
+++ b/local.yml
@@ -1,5 +1,8 @@
 - hosts: localhost
   become: true
   tasks:
-    - name: Install htop
-      pacman: name=htop
+    - name: Install packages
+      pacman: name={{item}}
+      with_items:
+        - tmux
+        - vim
