New specification trial and error

--- a/local.yml
+++ b/local.yml
@@ -1,5 +1,5 @@
 - hosts: localhost
   become: true
   tasks:
-    - name: Install packages
-      pacman: name=['tmux', 'vim']
+      pacman:
+        name: ['tmux', 'vim']
