--- a/local.yml
+++ b/local.yml
@@ -1,6 +1,9 @@
 - hosts: localhost
   become: true
+  pre_tasks:
+    - name: update repositories
+      pacman: update_cache=yes
+      changed_when: False
+
   tasks:
-    - name: Install packages
-      pacman:
-        name: ['tmux', 'vim']
+    - include: tasks/packages.yml
