--- a/station.yml
+++ b/station.yml
@@ -1,13 +1,12 @@
+- name: Import common playbook
+  import_playbook: common.yml
+
 - hosts: localhost
   become: true
-  pre_tasks:
-    - name: update repositories
-      pacman: update_cache=yes
-      changed_when: False
 
   roles:
     - { role: imwheel, tags: ['imwheel'] }
-    - { role: spacemacs, tags: ['spacemacs'] }
+    - { role: mpd, tags: ['mpd'] }
 
   # tasks:
   #   # - include: tasks/packages.yml
