--- a/roles/spacemacs/tasks/main.yml
+++ b/roles/spacemacs/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: Spacemacs javascript layer dependencies
+- name: Install spacemacs javascript layer dependencies
   pacman:
     name:
       - nodejs
