Create mpd config dir

--- a/roles/mpd/tasks/main.yml
+++ b/roles/mpd/tasks/main.yml
@@ -1,6 +1,10 @@
 - name: Install mpd
   pacman: name=mpd state=present
 
+- name: Create mpd config dir
+  name: '/home/{{ user.name }}/.config/mpd'
+  state: directory
+
 - name: Link mpd.conf
   file:
     src: '/home/{{ user.name }}/{{ repo.dotfiles.dir_name }}/config/mpd/mpd.conf'
