--- a/roles/mpd/tasks/main.yml
+++ b/roles/mpd/tasks/main.yml
@@ -10,7 +10,7 @@
   file:
     src: '/home/{{ user.name }}/{{ repo.dotfiles.dir_name }}/config/mpd/mpd.conf'
     dest: '/home/{{ user.name }}/.config/mpd/mpd.conf'
-    owner: {{ user.name }}
+    owner: "{{ user.name }}"
     state: link
 
 - name: Install cantata
