--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,4 +1,3 @@
 - name: Install common packages
   pacman:
-    name: "{{ item }}"
-    loop: "{{ packages.common }}"
+    name: "{{ packages.common }}"
