--- a/roles/imwheel/tasks/main.yml
+++ b/roles/imwheel/tasks/main.yml
@@ -5,6 +5,6 @@
   file:
     src: '/home/{{ user.name }}/{{ repo.dotfiles.dir_name }}/imwheelrc'
     dest: '/home/{{ user.name }}/.imwheelrc'
-    user: "{{ user.name }}"
+    owner: "{{ user.name }}"
     group: "{{ user.name }}"
     state: link
