--- a/roles/mpd/tasks/main.yml
+++ b/roles/mpd/tasks/main.yml
@@ -18,4 +18,7 @@
   pacman: name=cantata state=present
 
 - name: Install mpc
-  pacman: name=mpc state=present
+  pacman: name=mpc state=absent
+
+- name: Install ncmpcpp
+  pacman: name=ncmpcpp state=present
