--- a/roles/alsa/tasks/main.yml
+++ b/roles/alsa/tasks/main.yml
@@ -2,4 +2,6 @@
   file:
     src: "/home/{{ user.name }}/{{ repo.dotfiles.dir_name }}/asoundrc"
     dest: "/home/{{ user.name }}/.asoundrc"
+    owner: "{{ user.name }}"
+    group: "{{ user.name }}"
     state: link
