--- a/roles/mpd/tasks/main.yml
+++ b/roles/mpd/tasks/main.yml
@@ -1,30 +1,43 @@
+## Daemon install and config
 - name: Install mpd
   pacman: name=mpd state=present
 
 - name: Create mpd config dir
+  become: yes
+  become_user: "{{ user.name }}"
   file:
     name: '/home/{{ user.name }}/.config/mpd'
     state: directory
+    recurse: yes
 
 - name: Link mpd.conf
+  become: yes
+  become_user: "{{ user.name }}"
   file:
     src: '/home/{{ user.name }}/{{ repo.dotfiles.dir_name }}/config/mpd/mpd.conf'
     dest: '/home/{{ user.name }}/.config/mpd/mpd.conf'
-    owner: "{{ user.name }}"
-    group: "{{ user.name }}"
+    # owner: "{{ user.name }}"
+    # group: "{{ user.name }}"
     state: link
 
+## Client install and config
+
 - name: Create ncmpc config dir
+  become: yes
+  become_user: "{{ user.name }}"
   file:
     name: '/home/{{ user.name }}/.config/ncmpc'
     state: directory
+    recurse: yes
 
 - name: Link ncmpc config
+  become: yes
+  become_user: "{{ user.name }}"
   file:
     src: '/home/{{ user.name }}/{{ repo.dotfiles.dir_name }}/config/ncmpc/config'
     dest: '/home/{{ user.name }}/.config/ncmpc/config'
-    owner: "{{ user.name }}"
-    group: "{{ user.name }}"
+    # owner: "{{ user.name }}"
+    # group: "{{ user.name }}"
     state: link
 
 - name: Install mpc
