--- a/roles/mpd/tasks/main.yml
+++ b/roles/mpd/tasks/main.yml
@@ -2,14 +2,18 @@
 - name: Install mpd
   pacman: name=mpd state=present
 
-- name: Link mpd config
+- name: Create mpd config dir
   become: yes
   become_user: "{{ user.name }}"
   file:
     name: '/home/{{ user.name }}/.config/mpd'
     state: directory
     recurse: yes
-- file:
+
+- name: Link ncmpc config
+  become: yes
+  become_user: "{{ user.name }}"
+  file:
     src: '/home/{{ user.name }}/{{ repo.dotfiles.dir_name }}/config/mpd/mpd.conf'
     dest: '/home/{{ user.name }}/.config/mpd/mpd.conf'
     state: link
@@ -24,14 +28,18 @@
 - name: Install cantata
   pacman: name=cantata state=present
 
-- name: Link ncmpc config
+- name: Create ncmpc config dir
   become: yes
   become_user: "{{ user.name }}"
   file:
     name: '/home/{{ user.name }}/.config/ncmpc'
     state: directory
     recurse: yes
-- file:
+
+- name: Link ncmpc config
+  become: yes
+  become_user: "{{ user.name }}"
+  file:
     src: '/home/{{ user.name }}/{{ repo.dotfiles.dir_name }}/config/ncmpc/config'
     dest: '/home/{{ user.name }}/.config/ncmpc/config'
     state: link
