--- a/roles/mpd/tasks/main.yml
+++ b/roles/mpd/tasks/main.yml
@@ -10,7 +10,7 @@
     state: directory
     recurse: yes
 
-- name: Link ncmpc config
+- name: Link mpd config
   become: yes
   become_user: "{{ user.name }}"
   file:
